2003-10-04  Christian Groessler  <chris@groessler.org>

	* tc-z8k.c (newfix): Tell fix_new_exp about pc relativeness.
	(md_apply_fix3): Fix R_JR, R_DISP7, and R_CALLR cases.
	(md_pcrel_from): This function now gets called. Supply return
	value.

2003-10-04  Nick Clifton  <nickc@redhat.com>

	* as.c: Convert to ISO C90.

2003-10-04  Nick Clifton  <nickc@redhat.com>

	* as.c (std_shortopts): Remove 'f'.
	(std_longopts): Add 'f'.  Doing this prevents -f<foo> being
	acecpted as an alias for -f.

2003-10-04  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>

	* config/obj-coff.c (obj_coff_section [BEF_ASSEMBLER]):
	Make 'r' mean readonly data.

2003-10-01  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (macro_build_ldst_constoffset,load_register,macro):
	Unbreak overflow checks.

2003-10-01  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (s_cpreturn): Correct errors in comment.

2003-10-01  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (macro_build_ldst_constoffset): Fix sign extension
	tests.
	(load_register): Likewise.
	(macro): Likewise.

2003-09-30  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (mips_ip): Capitalize first word of
	existing condition code warning, and add condition code
	warnings for .ps instructions, and for bc1any[24][tf].

2003-09-30  Chris Demetriou  <cgd@broadcom.com>

	* NEWS: Mention support for MIPS64 Release 2.

2003-09-30  Chris Demetriou  <cgd@broadcom.com>

	* NEWS: Add an indication of the cutoff for 2.14.

2003-09-30  Chris Demetriou  <cgd@broadcom.com>

	* configure.in (mipsisa64r2, mipsisa64r2el, mipsisa64r2*): New CPUs.
	* configure: Regenerate.
	* config/tc-mips.c (imm2_expr): New variable.
	(md_assemble, mips16_ip): Initialize imm2_expr.
	(ISA_HAS_64BIT_REGS, ISA_HAS_DROR, ISA_HAS_ROR): Add ISA_MIPS64R2.
	(macro_build): Handle +A, +B, +C, +E, +F, +G, and +H format operands.
	(macro): Handle M_DEXT and M_DINS.